--- a/Contact ME/contact.html
+++ b/Contact ME/contact.html
@@ -9,7 +9,19 @@
 </head>
 <body>
  <!-- Header / Nav (reuse from your existing layout) -->
- 
+ <header>
+    <div class="logo"></div>
+    <nav>
+        <ul class="nav-links">
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/Resume/resume.html">Resume</a></li>
+            <li><a href="/Projects/projects.html">Projects</a></li>
+            <li><a href="/Contact ME/contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    <div class="menu-toggle">☰</div>
+</header>
+
     <section class="contact-container">
         <h1 class="contact-title">Let's Connect</h1>
         <p class="contact-subtitle">Reach out to collaborate, ask questions, or just say hello!</p>
