--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="./Resume/resume.html">Resume</a></li>
                 <li><a href="./Projects/projects.html">Projects</a></li>
-                <li><a href="/Contact ME/contact.html">Contact</a></li>
+                <li><a href="./Contact ME/contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="menu-toggle">☰</div>
