--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -15,10 +15,10 @@
   <!-- Header / Nav (reuse from your existing layout) -->
   <header class="header">
     <nav class="nav">
-      <a href="/Projects/projects.html" class="logo">MyPortfolio</a>
+      <a href="./Projects/projects.html" class="logo">MyPortfolio</a>
       <ul class="nav-links">
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/Resume/resume.html">Resume</a></li>
+        <li><a href=". /index.html">Home</a></li>
+        <li><a href="./Resume/resume.html">Resume</a></li>
         <li><a href="projects.html" class="active">Projects</a></li>
       </ul>
     </nav>
@@ -31,7 +31,7 @@
       <p class="subtitle">
         A collection of my work across <strong>UI/UX Design</strong> and <strong>Web Development</strong>.
       </p>
-    </section>
+    </section>     
 
     <!-- UI/UX Projects -->
     <section class="project-category fade-section">
@@ -40,7 +40,7 @@
         <!-- Project Item 01 -->
         <div class="project-item">
           <div class="project-image">
-            <a href="https://www.figma.com/proto/XUd7sUEJr1mpo5IghKr2w0/VULCAN-PAGE?content-scaling=fixed&kind=proto&node-id=2-2&page-id=0%3A1&scaling=scale-down&starting-point-node-id=2%3A2" > <img src="/assets/project 1.PNG" alt="UI/UX Project 01">
+            <a href="https://www.figma.com/proto/XUd7sUEJr1mpo5IghKr2w0/VULCAN-PAGE?content-scaling=fixed&kind=proto&node-id=2-2&page-id=0%3A1&scaling=scale-down&starting-point-node-id=2%3A2" > <img src="./assets/project 1.PNG" alt="UI/UX Project 01">
           </div>
           <div class="project-info">
             <h3 class="project-number">01</h3>
@@ -55,7 +55,7 @@
         <!-- Project Item 02 -->
         <div class="project-item">
           <div class="project-image">
-            <a href="https://www.figma.com/proto/kP2kozNSq0PqLl7uiBya9g/SMART-BABY?page-id=8%3A2&node-id=37-426&p=f&viewport=-54%2C-16%2C0.25&t=tKunBjjPt4Owgkiu-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=36%3A320"> <img src="/assets/project 2.PNG" alt="UI/UX Project 02">
+            <a href="https://www.figma.com/proto/kP2kozNSq0PqLl7uiBya9g/SMART-BABY?page-id=8%3A2&node-id=37-426&p=f&viewport=-54%2C-16%2C0.25&t=tKunBjjPt4Owgkiu-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=36%3A320"> <img src="./assets/project 2.PNG" alt="UI/UX Project 02">
           </div>
           <div class="project-info">
             <h3 class="project-number">02</h3>
