--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -15,11 +15,11 @@
   <!-- Header / Nav (reuse from your existing layout) -->
   <header class="header">
     <nav class="nav">
-      <a href="./Projects/projects.html" class="logo">MyPortfolio</a>
+      <a href="http://127.0.0.1:3000/Projects/projects.html" class="logo">MyPortfolio</a>
       <ul class="nav-links">
-        <li><a href=". /index.html">Home</a></li>
-        <li><a href="./Resume/resume.html">Resume</a></li>
-        <li><a href="projects.html" class="active">Projects</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="http://127.0.0.1:3000/Resume/resume.html">Resume</a></li>
+        <li><a href="http://127.0.0.1:3000/Projects/projects.html" class="active">Projects</a></li>
       </ul>
     </nav>
   </header>
@@ -31,65 +31,63 @@
       <p class="subtitle">
         A collection of my work across <strong>UI/UX Design</strong> and <strong>Web Development</strong>.
       </p>
-    </section>     
+    </section>
 
     <!-- UI/UX Projects -->
     <section class="project-category fade-section">
       <h2 class="category-title">UI/UX Design Portfolio</h2>
       <div class="project-grid">
-        <!-- Project Item 01 -->
-        <div class="project-item">
-          <div class="project-image">
-            <a href="https://www.figma.com/proto/XUd7sUEJr1mpo5IghKr2w0/VULCAN-PAGE?content-scaling=fixed&kind=proto&node-id=2-2&page-id=0%3A1&scaling=scale-down&starting-point-node-id=2%3A2" > <img src="./assets/project 1.PNG" alt="UI/UX Project 01">
-          </div>
-          <div class="project-info">
-            <h3 class="project-number">01</h3>
-            <h4 class="project-name">Artist Portfolio</h4>
-            <p class="project-details">2024 | UI/UX Case Study</p>
-            <p class="project-description">
-              A personal artist website
-            </p>
-          </div>
-        </div>
-
-        <!-- Project Item 02 -->
-        <div class="project-item">
-          <div class="project-image">
-            <a href="https://www.figma.com/proto/kP2kozNSq0PqLl7uiBya9g/SMART-BABY?page-id=8%3A2&node-id=37-426&p=f&viewport=-54%2C-16%2C0.25&t=tKunBjjPt4Owgkiu-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=36%3A320"> <img src="./assets/project 2.PNG" alt="UI/UX Project 02">
-          </div>
-          <div class="project-info">
-            <h3 class="project-number">02</h3>
-            <h4 class="project-name">E-commerce Website</h4>
-            <p class="project-details">2025 | UX Research & Design</p>
-            <p class="project-description">
-              Developed a streamlined user journey for a socks e-commerce platform, 
-              improving conversion rates through user-centric design solutions.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Web Development Projects -->
-    <section class="project-category fade-section">
-      <h2 class="category-title">Web Development Projects</h2>
-      <div class="project-grid">
-        <!-- Project Item 03 -->
-        <div class="project-item">
-          <div class="project-image">
-            <a href="/index.html"> <img src="/assets/project 3.PNG" alt="Web Design 01">
-          </div>
-          <div class="project-info">
-            <h3 class="project-number">03</h3>
-            <h4 class="project-name">Responsive Portfolio Site</h4>
-            <p class="project-details">2025 | HTML, CSS, JS</p>
-            <p class="project-description">
-              Created a modern and fully responsive portfolio website using HTML, CSS, 
-              and JavaScript to showcase projects with interactive animations.
-            </p>
-          </div>
-        </div>
-      </div>
+       <!-- Project Item 01 -->
+<div class="project-item">
+    <div class="project-image">
+      <a href="https://www.figma.com/proto/XUd7sUEJr1mpo5IghKr2w0/VULCAN-PAGE?content-scaling=fixed&kind=proto&node-id=2-2&page-id=0%3A1&scaling=scale-down&starting-point-node-id=2%3A2">
+        <img src="/assets/project 1.PNG" alt="UI/UX Project 01">
+      </a>
+    </div>
+    <div class="project-info">
+      <h3 class="project-number">01</h3>
+      <h4 class="project-name">Artist Portfolio</h4>
+      <p class="project-details">2024 | UI/UX Case Study</p>
+      <p class="project-description">A personal artist website</p>
+    </div>
+  </div>
+  
+  <!-- Project Item 02 -->
+  <div class="project-item">
+    <div class="project-image">
+      <a href="https://www.figma.com/proto/kP2kozNSq0PqLl7uiBya9g/SMART-BABY?page-id=8%3A2&node-id=37-426&p=f&viewport=-54%2C-16%2C0.25&t=tKunBjjPt4Owgkiu-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=36%3A320">
+        <img src="/assets/project 2.PNG" alt="UI/UX Project 02">
+      </a>
+    </div>
+    <div class="project-info">
+      <h3 class="project-number">02</h3>
+      <h4 class="project-name">E-commerce Website</h4>
+      <p class="project-details">2025 | UX Research & Design</p>
+      <p class="project-description">
+        Developed a streamlined user journey for a socks e-commerce platform,
+        improving conversion rates through user-centric design solutions.
+      </p>
+    </div>
+  </div>
+  
+  <!-- Project Item 03 -->
+  <div class="project-item">
+    <div class="project-image">
+      <a href="/index.html">
+        <img src="/assets/project 3.PNG" alt="Web Design 01">
+      </a>
+    </div>
+    <div class="project-info">
+      <h3 class="project-number">03</h3>
+      <h4 class="project-name">Responsive Portfolio Site</h4>
+      <p class="project-details">2025 | HTML, CSS, JS</p>
+      <p class="project-description">
+        Created a modern and fully responsive portfolio website using HTML, CSS,
+        and JavaScript to showcase projects with interactive animations.
+      </p>
+    </div>
+  </div>
+  
     </section>
   </main>
 
