--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <nav>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
-                <li><a href="http://127.0.0.1:3000/Resume/resume.html">Resume</a></li>
-                <li><a href="http://127.0.0.1:3000/Projects/projects.html">Projects</a></li>
-                <li><a href="http://127.0.0.1:3000/Contact ME/contact.html">Contact</a></li>
+                <li><a href="C:\Users\osagi\Desktop\WEB DEV PROJECTS\NEW WEBSITE 2025\Resume\resume.html">Resume</a></li>
+                <li><a href="C:\Users\osagi\Desktop\WEB DEV PROJECTS\NEW WEBSITE 2025\Projects\projects.html">Projects</a></li>
+                <li><a href="C:\Users\osagi\Desktop\WEB DEV PROJECTS\NEW WEBSITE 2025\Contact ME\contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="menu-toggle">☰</div>
@@ -27,7 +27,7 @@
                 <h2>Hello, My Name Is</h2>
                 <h1>EMMANUEL UGHELE</h1>
                 <p>A creative UI/UX designer and Web Developer, I enjoy creating user-friendly interfaces and building clean, functional websites. Always learning, always designing.</p>
-                <a href="http://127.0.0.1:3000/Contact ME/contact.html" class="btn">Contact Me</a>
+                <a href="C:\Users\osagi\Desktop\WEB DEV PROJECTS\NEW WEBSITE 2025\Contact ME\contact.html" class="btn">Contact Me</a>
             </div>
             <div class="hero-image">
                 <img src="./assets/profile picture.JPEG" alt="Profile Picture">
