--- a/Contact ME/contact.html
+++ b/Contact ME/contact.html
@@ -13,10 +13,10 @@
     <div class="logo"></div>
     <nav>
         <ul class="nav-links">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/Resume/resume.html">Resume</a></li>
-            <li><a href="/Projects/projects.html">Projects</a></li>
-            <li><a href="/Contact ME/contact.html">Contact</a></li>
+            <li><a href="C:\Users\osagi\Desktop\WEB DEV PROJECTS\NEW WEBSITE 2025\index.html">Home</a></li>
+            <li><a href="C:\Users\osagi\Desktop\WEB DEV PROJECTS\NEW WEBSITE 2025\Resume\resume.html">Resume</a></li>
+            <li><a href="C:\Users\osagi\Desktop\WEB DEV PROJECTS\NEW WEBSITE 2025\Projects\projects.html">Projects</a></li>
+            <li><a href="C:\Users\osagi\Desktop\WEB DEV PROJECTS\NEW WEBSITE 2025\Contact ME\contact.html">Contact</a></li>
         </ul>
     </nav>
     <div class="menu-toggle">☰</div>
@@ -29,31 +29,31 @@
         <div class="contact-grid">
             <!-- Email -->
             <div class="contact-item">
-                <img src="/assets/email.png" alt="Email">
+                <img src="./email.jpeg" alt="Email">
                 <a href="mailto:osagieughele@gmail.com">osagieughele@gmail.com</a>
             </div>
 
             <!-- Phone -->
             <div class="contact-item">
-                <img src="/assets/telephone.png" alt="Phone">
+                <img src="./telephone.jpeg" alt="Phone">
                 <a href="tel:+2349012597514">+234 901 259 7514</a>
             </div>
 
             <!-- Instagram -->
             <div class="contact-item">
-                <img src="/assets/instagram.png" alt="Instagram">
+                <img src="./instagram.jpeg" alt="Instagram">
                 <a href="https://www.instagram.com/vulcan_studio_architects" target="_blank">@vulcan_studio_architects</a>
             </div>
 
             <!-- LinkedIn -->
             <div class="contact-item">
-                <img src="/assets/linkedin.png" alt="LinkedIn">
+                <img src="./linkedin.jpeg" alt="LinkedIn">
                 <a href="https://www.linkedin.com/in/emmanuel-ughele-8097a9185/" target="_blank">LinkedIn Profile</a>
             </div>
 
             <!-- Twitter -->
             <div class="contact-item">
-                <img src="/assets/x icon.png" alt="Twitter">
+                <img src="./x icon.jpeg" alt="Twitter">
                 <a href="https://twitter.com/vulcanstudionft" target="_blank">@vulcanstudionft</a>
             </div>
         </div>
