--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -15,11 +15,11 @@
   <!-- Header / Nav (reuse from your existing layout) -->
   <header class="header">
     <nav class="nav">
-      <a href="http://127.0.0.1:3000/Projects/projects.html" class="logo">MyPortfolio</a>
+      <a href="C:\Users\osagi\Desktop\WEB DEV PROJECTS\NEW WEBSITE 2025\Projects\projects.html" class="logo">MyPortfolio</a>
       <ul class="nav-links">
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="http://127.0.0.1:3000/Resume/resume.html">Resume</a></li>
-        <li><a href="http://127.0.0.1:3000/Projects/projects.html" class="active">Projects</a></li>
+        <li><a href="C:\Users\osagi\Desktop\WEB DEV PROJECTS\NEW WEBSITE 2025\index.html">Home</a></li>
+        <li><a href="C:\Users\osagi\Desktop\WEB DEV PROJECTS\NEW WEBSITE 2025\Resume\resume.html">Resume</a></li>
+        <li><a href="#projects" class="active">Projects</a></li>
       </ul>
     </nav>
   </header>
@@ -41,7 +41,7 @@
 <div class="project-item">
     <div class="project-image">
       <a href="https://www.figma.com/proto/XUd7sUEJr1mpo5IghKr2w0/VULCAN-PAGE?content-scaling=fixed&kind=proto&node-id=2-2&page-id=0%3A1&scaling=scale-down&starting-point-node-id=2%3A2">
-        <img src="/assets/project 1.PNG" alt="UI/UX Project 01">
+        <img src="./project1.jpg" alt="UI/UX Project 01">
       </a>
     </div>
     <div class="project-info">
@@ -56,7 +56,7 @@
   <div class="project-item">
     <div class="project-image">
       <a href="https://www.figma.com/proto/kP2kozNSq0PqLl7uiBya9g/SMART-BABY?page-id=8%3A2&node-id=37-426&p=f&viewport=-54%2C-16%2C0.25&t=tKunBjjPt4Owgkiu-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=36%3A320">
-        <img src="/assets/project 2.PNG" alt="UI/UX Project 02">
+        <img src="./project2.jpeg" alt="UI/UX Project 02">
       </a>
     </div>
     <div class="project-info">
@@ -73,8 +73,8 @@
   <!-- Project Item 03 -->
   <div class="project-item">
     <div class="project-image">
-      <a href="/index.html">
-        <img src="/assets/project 3.PNG" alt="Web Design 01">
+      <a href="C:\Users\osagi\Desktop\WEB DEV PROJECTS\NEW WEBSITE 2025\index.html">
+        <img src="./project3.jpeg" alt="Web Design 01">
       </a>
     </div>
     <div class="project-info">
