--- a/Resume/resume.html
+++ b/Resume/resume.html
@@ -17,10 +17,10 @@
   <header class="header">
     <nav class="nav">
       <!-- If you have a logo or want a home link, etc. -->
-      <a href="http://127.0.0.1:3000/Projects/projects.html" class="logo">MyPortfolio</a>
+      <a href="C:\Users\osagi\Desktop\WEB DEV PROJECTS\NEW WEBSITE 2025\Projects\projects.html" class="logo">MyPortfolio</a>
       <ul class="nav-links">
-        <li><a href="http://127.0.0.1:3000/index.html">Home</a></li>
-        <li><a href="http://127.0.0.1:3000/Resume/resume.html" class="active">Resume</a></li>
+        <li><a href="C:\Users\osagi\Desktop\WEB DEV PROJECTS\NEW WEBSITE 2025\index.html">Home</a></li>
+        <li><a href="#resume" class="active">Resume</a></li>
         <!-- Add more nav links as needed -->
       </ul>
     </nav>
