--- a/Projects/Home/Projects/projects.html
+++ b/Projects/Home/Projects/projects.html
@@ -73,7 +73,7 @@
   <!-- Project Item 03 -->
   <div class="project-item">
     <div class="project-image">
-      <a href="Home\index.html">
+      <a href="C:\Users\osagi\Desktop\WEB DEV PROJECTS\NEW WEBSITE 2025\index.html">
         <img src="./project3.jpeg" alt="Web Design 01">
       </a>
     </div>
