--- a/Projects/Home/Resume/Home/Projects/Resume/rootfile/index.html
+++ b/Projects/Home/Resume/Home/Projects/Resume/rootfile/index.html
@@ -30,7 +30,7 @@
                 <a href="Contact ME\contact.html" class="btn">Contact Me</a>
             </div>
             <div class="hero-image">
-                <img src="./assets/profile picture.JPEG" alt="Profile Picture">
+                <img src="./profile picture.JPEG" alt="Profile Picture">
             </div>
         </section>
 
