--- a/Projects/Home/Resume/resume.html
+++ b/Projects/Home/Resume/resume.html
@@ -17,9 +17,9 @@
   <header class="header">
     <nav class="nav">
       <!-- If you have a logo or want a home link, etc. -->
-      <a href="Home\Projects\projects.html" class="logo">MyPortfolio</a>
+      <a href="portfolio\projects.html" class="logo">MyPortfolio</a>
       <ul class="nav-links">
-        <li><a href="Home\index.html">Home</a></li>
+        <li><a href="rootfile\index.html">Home</a></li>
         <li><a href="#resume" class="active">Resume</a></li>
         <!-- Add more nav links as needed -->
       </ul>
