--- a/Resume/Home/Projects/projects.html
+++ b/Resume/Home/Projects/projects.html
@@ -17,8 +17,8 @@
     <nav class="nav">
       <a href="projects.html" class="logo">MyPortfolio</a>
       <ul class="nav-links">
-        <li><a href="Home\index.html">Home</a></li>
-        <li><a href="Home\Resume\resume.html">Resume</a></li>
+        <li><a href="C:\Users\osagi\Desktop\WEB DEV PROJECTS\NEW WEBSITE 2025\index.html">Home</a></li>
+        <li><a href="Resume\resume.html">Resume</a></li>
         <li><a href="#projects" class="active">Projects</a></li>
       </ul>
     </nav>
@@ -73,7 +73,7 @@
   <!-- Project Item 03 -->
   <div class="project-item">
     <div class="project-image">
-      <a href="Home\index.html">
+      <a href="C:\Users\osagi\Desktop\WEB DEV PROJECTS\NEW WEBSITE 2025\index.html">
         <img src="./project3.jpeg" alt="Web Design 01">
       </a>
     </div>
