--- a/Contact ME/Home/Resume/Home/Contact ME/contact.html
+++ b/Contact ME/Home/Resume/Home/Contact ME/contact.html
@@ -13,10 +13,10 @@
     <div class="logo"></div>
     <nav>
         <ul class="nav-links">
-            <li><a href="Home\index.html">Home</a></li>
-            <li><a href="Home\Resume\resume.html">Resume</a></li>
-            <li><a href="Home\Projects\projects.html">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="C:\Users\osagi\Desktop\WEB DEV PROJECTS\NEW WEBSITE 2025\index.html">Home</a></li>
+            <li><a href="C:\Users\osagi\Desktop\WEB DEV PROJECTS\NEW WEBSITE 2025\Resume\resume.html">Resume</a></li>
+            <li><a href="C:\Users\osagi\Desktop\WEB DEV PROJECTS\NEW WEBSITE 2025\Projects\projects.html">Projects</a></li>
+            <li><a href="C:\Users\osagi\Desktop\WEB DEV PROJECTS\NEW WEBSITE 2025\Contact ME\contact.html">Contact</a></li>
         </ul>
     </nav>
     <div class="menu-toggle">☰</div>
