--- a/Contact ME/contact.html
+++ b/Contact ME/contact.html
@@ -13,9 +13,9 @@
     <div class="logo"></div>
     <nav>
         <ul class="nav-links">
-            <li><a href="Home\index.html">Home</a></li>
-            <li><a href="Home\Resume\resume.html">Resume</a></li>
-            <li><a href="Home\Projects\projects.html">Projects</a></li>
+            <li><a href="..\index.html">Home</a></li>
+            <li><a href="..\Resume\resume.html">Resume</a></li>
+            <li><a href="..\Projects\projects.html">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
